<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PedpoRent</string>
    <string name="api_key_private" translatable="false">AIzaSyDhK_PQWEK1G86ktGnUZMwPAmyin6K4rq8</string>
    <string name="Base_Url_Pedpo" translatable="false">https://rent.pedpo.ir/api/</string>
    <string name="heatingNaturalGas">Natural Gas</string>
    <string name="heatingForcedAir">Forced Air</string>
    <string-array name="week_sun_sat">
        <item>@string/sun</item>
        <item>@string/mon</item>
        <item>@string/tue</item>
        <item>@string/wed</item>
        <item>@string/thu</item>
        <item>@string/fri</item>
        <item>@string/sat</item>
    </string-array>
    <string-array name="weekEN">
        <item>@string/mon</item>
        <item>@string/tue</item>
        <item>@string/wed</item>
        <item>@string/thu</item>
        <item>@string/fri</item>
        <item>@string/sat</item>
        <item>@string/sun</item>
    </string-array>
    <string name="fri">Fri</string>
    <string name="mon">Mon</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="thu">Thu</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string-array name="week">

        <item>@string/sat</item>
        <item>@string/sun</item>
        <item>@string/mon</item>
        <item>@string/tue</item>
        <item>@string/wed</item>
        <item>@string/thu</item>
        <item>@string/fri</item>

    </string-array>
    <string name="done" translatable="false">Done</string>
    <string name="select_time" translatable="false">Select a Time</string>
    <string name="title_time_picker" translatable="false">Select Time</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="satDay">Saturday</string>
    <string name="sunDay">Sunday</string>
    <string name="monDay">Monday</string>
    <string name="tuesDay">Tuesday</string>
    <string name="wednesDay">Wednesday</string>
    <string name="thursDay">Thursday</string>
    <string name="friDay">Friday</string>
    <string-array name="month_string">
        <item>@string/jan</item>
        <item>@string/feb</item>
        <item>@string/mar</item>
        <item>@string/apr</item>
        <item>@string/may</item>
        <item>@string/jun</item>
        <item>@string/jul</item>
        <item>@string/aug</item>
        <item>@string/sep</item>
        <item>@string/oct</item>
        <item>@string/nov</item>
        <item>@string/dec</item>
    </string-array>
    <string name="coolingCentralAIR">Central Air Conditioning</string>
    <string name="coolingRoomAIR">Room Air Conditioning</string>
    <string name="coolingEvaporative">Evaporative Coolers</string>
    <string name="coolingDuctlessSpilt">Ductless Mini - Split Air Conditioners</string>
    <string name="parkingConcrete">Concrete</string>
    <string name="parkingCarport">Carport</string>
    <string name="parkingOpenDrive">Open Driveway</string>
    <string name="parkingHeatedGarage">Heated Garage</string>
    <string name="parkingUnderGround">Underground</string>
    <string name="parkingBoartHouse">Boathouse</string>
    <string name="parkingAttachedGarage">Attached Garage</string>
    <string name="parkingDetachedGarage">Detached Garage</string>
    <string name="None">None</string>
    <string-array name="parkings">
        <item>@string/parkingConcrete</item>
        <item>@string/parkingCarport</item>
        <item>@string/parkingOpenDrive</item>
        <item>@string/parkingHeatedGarage</item>
        <item>@string/parkingUnderGround</item>
        <item>@string/parkingBoartHouse</item>
        <item>@string/parkingAttachedGarage</item>
        <item>@string/parkingDetachedGarage</item>
        <item>@string/None</item>
    </string-array>
    <string-array name="arrayMenu">
        <item>@string/low</item>
        <item>@string/normal</item>
        <item>@string/important</item>
    </string-array>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="important">Critical</string>
    <string name="ticket">Ticket</string>
    <string-array name="deposit">

        <item>@string/national_id_card</item>
        <item>@string/certificate</item>
        <item>@string/promissory_note</item>
        <item>@string/check</item>
        <item>@string/other</item>

    </string-array>
    <string name="national_id_card">National Id Card</string>
    <string name="certificate">Certificate</string>
    <string name="promissory_note">Promissory Note</string>
    <string name="check">Check</string>
    <string name="other">Other</string>
    <string-array name="assignment">

        <item>@string/price2</item>
        <item>@string/an_agreement</item>
        <item>@string/free</item>
    </string-array>
    <string-array name="order">

        <item>@string/newwst</item>
        <item>@string/most_expensive</item>
        <item>@string/cheapest</item>
        <item>@string/most_visited</item>
    </string-array>
    <string name="newwst">Neewst</string>
    <string name="most_expensive">Most expensive</string>
    <string name="cheapest">Cheapest</string>
    <string name="most_visited">Most visited</string>
    <string-array name="month">
        <item>فروردین</item>
        <item>اردیبهشت</item>
        <item>خرداد</item>
        <item>تیر</item>
        <item>مرداد</item>
        <item>شهریور</item>
        <item>مهر</item>
        <item>آبان</item>
        <item>آذر</item>
        <item>دی</item>
        <item>بهمن</item>
        <item>اسفند</item>
    </string-array>
    <string name="enter">ورود</string>
    <string name="request_code">Request a code</string>
    <string name="request_permission">Apply for a permission</string>
    <string name="should_permission_Location">You must confirm the permission to access the location</string>
    <string name="should_permission_camera">You must confirm the permission to access the camera</string>
    <string name="should_permission_gallery">You must confirm the permission to access the gallery</string>
    <string name="confirm_pemissions">Manually verify permissions</string>
    <string name="please_confirm_permission_setting">Please enable permissions in the app settings (Permissions option)</string>
    <string name="permission_not_confirm">Permission not approved</string>
    <string name="ad_registration">Ad registration</string>
    <string name="mention_important_items_in_the_title_of_the_ad">Please type a title for this matter.</string>
    <string name="description_description">Write the full details and highlights of your ad. It is not allowed to write the phone number in the description.</string>
    <string name="the_text_of_the_agreement">contract agreements between two parties</string>
    <string name="enter_a_supplementary_agreement_if_necessary">Enter a supplementary agreement if necessary.</string>
    <string name="countinue">Countinue</string>
    <string name="ad_image">Ad Image</string>
    <string name="adding_a_photo_will_increase_your_ad_view">Adding a photo will increase your ad view</string>
    <string name="lorem" translatable="false">
Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
</string>
    <string name="loremComment" translatable="false">
Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</string>
    <string name="test" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vestibulum, felis vitae commodo interdum, ipsum odio auctor erat, sed suscipit nibh tortor sit amet nulla. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer in tempor leo, sit amet consectetur nunc. Maecenas eu lacus accumsan, fermentum felis ac, tristique urna. Aliquam erat volutpat. Sed dapibus dolor eu arcu consequat fringilla. Nullam ultrices orci lorem, et tempus mi pellentesque non. Nulla vulputate neque non facilisis aliquam.

Quisque ut mauris nisl. Fusce vel accumsan neque. Praesent iaculis turpis sit amet laoreet ullamcorper. Donec feugiat purus ut lectus ultricies convallis. Nulla id est non felis consequat facilisis nec mattis velit. Quisque euismod dictum varius. Pellentesque feugiat, velit in luctus convallis, justo orci ultricies ex, eget placerat felis urna eget justo. Nulla pulvinar vitae lacus nec porttitor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.

Quisque tempus, urna in luctus tincidunt, metus diam efficitur eros, at eleifend nunc dolor eget lacus. Nullam dictum dapibus metus ut sollicitudin. Vestibulum sit amet nibh et purus tempor tincidunt a vel quam. Fusce eu placerat velit. Morbi pulvinar ante id nulla iaculis, ut hendrerit urna porttitor. Maecenas commodo, felis non euismod pellentesque, tortor tortor placerat leo, sit amet molestie metus risus ut lectus. Pellentesque in nisi vitae elit pulvinar gravida quis ultrices nisi. Nam sed lacinia sapien, eu cursus arcu. Nulla eu semper justo, eget luctus arcu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam et vulputate leo.

Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed auctor nisi est, vel faucibus nunc finibus non. Ut tincidunt mauris vitae enim laoreet, sit amet porta massa imperdiet. Pellentesque tempus, eros eget lacinia sagittis, enim purus porta sapien, eu pretium tortor sem ut lacus. Cras sit amet vulputate nibh. Vivamus aliquam ex vitae varius consequat. Nullam pellentesque tortor vel enim congue sodales. Mauris tellus lorem, finibus a fermentum nec, sagittis quis leo. Nam ut orci semper, auctor eros in, consequat turpis. Suspendisse sed sem efficitur est feugiat sollicitudin vel nec massa. Duis tempor tincidunt nunc, in pretium erat ultricies non. Nulla venenatis rhoncus erat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget ligula id nibh vulputate facilisis nec sit amet velit.</string>
    <string name="general_specification">General specification</string>
    <string name="confirm_Email">Please confirm your email address to complete your registration</string>
    <string name="booked">Booked</string>
    <string name="this_indicates_no_a_vailability">This indicates no availability</string>
    <string name="available">Available</string>
    <string name="this_indicates_available_dates_to_book">This indicates available dates to book</string>
    <string name="selected">Selected</string>
    <string name="this_indicates_dates_you_have_selected_to_book">This indicates dates you have selected to book</string>
    <string name="to">to</string>
    <string name="name">Name</string>
    <string name="apply">Apply</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="Introduction">Introduction</string>
    <string name="change_username">Change username</string>
    <string name="enter_the_real_value_of_the_goods">Enter The Real Value Of The Goods</string>
    <string name="security_deposit_type">Security Deposit Type</string>
    <string name="enter_the_input">Enter the input</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
</resources>