<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4_8"
        android:layout_marginBottom="@dimen/margin_4_8"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/resize_icon_p_legend"
            android:layout_height="@dimen/resize_icon_p_legend"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_pedpo_graphic_primary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/Introduction"
            android:textSize="@dimen/text_size_standard"
            />

        <ImageButton
            android:id="@+id/imgClose"
            android:layout_width="@dimen/resize_icon_p_legend"
            android:layout_height="@dimen/resize_icon_p_legend"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_close_24"
            android:background="@color/white"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:background="@color/line" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <View
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/border_red"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/booked"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_standard"
                android:text="@string/this_indicates_no_a_vailability"
                android:layout_marginBottom="16dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <View
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/border_gray"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_standard"
                android:text="@string/this_indicates_available_dates_to_book"
                android:layout_marginBottom="16dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <View
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/border_green"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_standard"
                android:text="@string/this_indicates_dates_you_have_selected_to_book"
                android:layout_marginBottom="16dp"
                />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>
