<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="listener"
            type="com.pedpo.pedporent.view.dialog.FragmentDialogChangeName" />
    </data>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_dark"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/white_dark_dialog"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            style="@style/textTitleBigger"
            android:id="@+id/tTitle"
            android:layout_width="0dp"
            android:textColor="@color/gray_7"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/change_username"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            app:boxBackgroundColor="@color/white_dark"
            app:boxStrokeWidth="1dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tTitle">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/editTextOpen"
                android:id="@+id/eName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="14sp"
                android:textColor="@color/black_dark"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#eee" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textview.MaterialTextView
            style="@style/textViewOpen"            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:stateListAnimator="@null"
            android:text="@string/confirm"
            android:onClick="@{listener::onClickConfirm}"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/textViewOpen"
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{listener::onClickCancel}"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:stateListAnimator="@null"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnConfirm"
            app:layout_constraintTop_toBottomOf="@+id/input" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
</layout>
