<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tTitle"
            style="@style/textViewOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/security_deposit_type"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tTitle"
            />

        <LinearLayout
            android:id="@+id/layoutOther"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/border_search_pedpo"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            >



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eOther"
                    style="@style/editTextOpen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/other"
                    android:maxLines="2"
                    android:maxLength="15"
                    android:imeOptions="actionDone"
                    android:inputType="text"

                    />

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            style="@style/ButtonStandard"
            android:text="@string/apply"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            />




    </LinearLayout>
</androidx.core.widget.NestedScrollView>
